--- a/src/requirements.txt
+++ b/src/requirements.txt
@@ -1,3 +1,9 @@
+keras==2.9.0
+mtcnn==0.1.1
 numpy==1.22.3
 opencv-python==4.5.5.64
+pandas==1.4.2
 Pillow==9.1.1
+python-dateutil==2.8.2
+pytz==2022.1
+six==1.16.0
