--- a/src/requirements.txt
+++ b/src/requirements.txt
@@ -3,6 +3,7 @@ astunparse==1.6.3
 cachetools==5.1.0
 certifi==2022.5.18
 charset-normalizer==2.0.12
+ClusterEnsembles==1.0.1
 cycler==0.11.0
 flatbuffers==1.12
 fonttools==4.33.3
@@ -15,14 +16,17 @@ h5py==3.6.0
 idna==3.3
 importlib-metadata==4.11.3
 joblib==1.1.0
+kahypar==1.1.7
 keras==2.9.0
+Keras-Applications==1.0.8
 Keras-Preprocessing==1.1.2
 keras-vggface==0.6
 kiwisolver==1.4.2
 libclang==14.0.1
 Markdown==3.3.7
-matplotlib==3.5.2
+matplotlib==3.3.4
 mtcnn==0.1.1
+mvlearn==0.5.0
 numpy==1.22.3
 oauthlib==3.2.0
 opencv-python==4.5.5.64
@@ -33,6 +37,7 @@ Pillow==9.1.1
 protobuf==3.20.1
 pyasn1==0.4.8
 pyasn1-modules==0.2.8
+PyMetis==2020.1
 pyparsing==3.0.9
 python-dateutil==2.8.2
 pytz==2022.1
@@ -42,6 +47,7 @@ requests-oauthlib==1.3.1
 rsa==4.8
 scikit-learn==1.1.1
 scipy==1.8.1
+seaborn==0.11.2
 six==1.16.0
 tensorboard==2.9.0
 tensorboard-data-server==0.6.1
